--- a/draft/scpt.tex
+++ b/draft/scpt.tex
@@ -1,4 +1,4 @@
-% choose one of following three
+﻿% choose one of following three
 %\documentclass[review]{elsarticle}
 %\documentclass[final,5p,times,twocolumn]{elsarticle}
 \documentclass[final,5p,times,twocolumn]{elsarticle}
@@ -42,9 +42,9 @@ $\gamma  TiAl$ has a fcc-centered tetragonal with an $\L1_0$ structure \ref{}, a
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{img/pf_model_labeled}
-	\caption{}
-	\label{fig：Simulation box}
 	\caption{Simulation box}
+
+	%\label{Simulation box}
 \end{figure}
 
 \subsection{Atomic potential}
@@ -63,8 +63,7 @@ $$\sigma_t(i)= $$
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{img/cell}
-	\caption{}
-	\label{fig:cell}
+	%\label{fig:cell}
 	\caption{units cell}
 \end{figure}
 \section{Results and Discussion}
