add lattice parameter

--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -50,6 +50,21 @@ TiAl alloy has been used as structural material in aviation industry because its
 	\caption{units cell}
 \end{figure}
 \subsection{Model creation of nanocrystalline}
+
+\begin{table}[h]
+	\centering
+	\caption{Parameters of  Nanocrystallin}
+	\begin{tabular}{l*{6}{c}r}
+			\hline
+			Phase			& Space group		& Designation		& Lattice parameters \\
+			\hline
+			$\alpha_2$		& $\rm P6_3/mmc$ 	& $\rm 0_{19}$ 		& a=0.5765 c=0.46833  \\
+			$\gamma$		& $\rm tP4$ 		& $\rm L1_0$			& a = 0.3997 c=0.4062 \\
+			\hline
+	\end{tabular}
+	\label{Tab:model-parameter}
+	\end{table}
+
 $\gamma $ TiAl has a fcc-centered tetragonal with an $L1_0$ structure \cite{}, and $\alpha TiAl$ is hcp structure, the structure of the two initial cell are shown in Fig.\cite{}, and the constructing parameters are givin by Table.\cite{}. The simulation cells of two phase poly crystal with an initially spherical void at different position are shown in figure \cite{}. Periodic boundary conditions are applied along all three directions, that makes poly crystal with periodic nanovoid structures. Each cuboidal model, containing about 4.6 million atoms,The initial dimension of simulation cell is  $L_x = nm$, $L_y =  nm$, $L_z =  nm$. The grain orientation and size were randomly created with Voronoi method with code ATOMSK \cite{}, and resulting in the arbitrary shape and orientation of the grains. Only one spherical void defect was placed intragranularlly or intergranularlly within each simulation model void within each simulation model. The intragranular spherical void was located in grain interior of the largest grain of the simulation model, as shown in Fig. \cite{}. The intergranular spherical void was at the center of the simulation cell, as shown in Fig. \cite{}.
 \begin{figure}
 	\centering
