fig label modified

--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -52,8 +52,8 @@ TiAl alloy has been used as structural material in aviation industry because its
 \begin{figure}
 	\centering
 	\includegraphics[width=1\linewidth]{img/cell}
-	%\label{fig:cell}
-	\caption{units cell}
+	\label{fig:unit_cell}
+	\caption{unit cell}
 \end{figure}
 
 
@@ -61,11 +61,10 @@ TiAl alloy has been used as structural material in aviation industry because its
 	\centering
 	\includegraphics[width=0.7\linewidth]{img/pf_model_labeled}
 	\caption{Simulation box}
-
+	\label{fig:simulation_box}
 \subsection{Model Creation of Crystalline}
 
 
-	%\label{Simulation box}
 \end{figure}
 
 \begin{table}[h]
@@ -82,7 +81,7 @@ TiAl alloy has been used as structural material in aviation industry because its
 			 				&					&					& $c$ = 0.4062 \\			
 			\hline
 	\end{tabular}
-	\label{Tab:model-parameter}
+	\label{tab:lattice_parameter}
 	\end{table}
  
 
@@ -108,7 +107,7 @@ where $\vec{R_i}$ and $\vec{R_{i+6}}$ are the vectors corresponding to the six p
 The atomic stress is calculated using the virial definition :
 $$\sigma_t(i)=-$$
 $$\sigma_t(i)= $$
-
+ 
 
 
 The existence of void detract the strength, and the void inside $\alpha$ phase grain have most significant  impact on the strength, however the void on the grain boundary have little impact on incipient strength of the material. Detailed observation of specimen with void inside the grain is shown in Figure \cite{}.
