--- a/draft/fmt.tex
+++ b/draft/fmt.tex
@@ -1,19 +1,22 @@
-\documentclass[final,5p,times,onecolumn]{elsarticle}
-%\documentclass[]{elsarticle}
-\usepackage[labelfont=bf,justification=raggedright]{caption}
-\captionsetup[figure]{name=Fig. ,labelsep=period,singlelinecheck=true,skip=5pt}
-\captionsetup[table]{labelsep=newline,font=footnotesize,singlelinecheck=false,skip=5pt}
-%\documentclass[final,5p,times,twocolumn]{elsarticle}
-\setlength{\mathindent}{3cm}
-%Function format
+\documentclass[preview,times]{elsarticle}
 \usepackage{lineno,hyperref}
 \modulolinenumbers[5]
+%\usepackage[labelfont=bf,justification=raggedright]{caption}
+%\captionsetup[figure]{name=Fig. ,labelsep=period,singlelinecheck=true,skip=5pt}
+%\captionsetup[table]{labelsep=newline,font=footnotesize,singlelinecheck=false,skip=5pt}
+\linenumbers
+
+%\documentclass[final,5p,times,twocolumn]{elsarticle}
+%\setlength{\mathindent}{3cm}
+%Function format
+%\usepackage{lineno,hyperref}
+%\modulolinenumbers[5]
 	
-	\journal{Computational Materaials Science}
+\journal{Computational Materaials Science}
 	
 	%%%%%%%%%%%%%%%%%%%%%%%
 	%% Elsevier bibliography styles
-	%%%%%%%%%%%%%%%%%%%%%%%
+	%%%%%%%%%%%%%%%%%%%%%%% 
 	%% To change the style, put a % in front of the second line of the current style and
 	%% remove the % from the second line of the style you would like to use.
 	%%%%%%%%%%%%%%%%%%%%%%%
@@ -26,7 +29,7 @@
 	
 	%% Harvard
 \bibliographystyle{elsarticle-num.bst}
-\modulolinenumbers[5]
+%\modulolinenumbers[5]
 \journal{Materials and Design}
 %%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
@@ -44,7 +47,7 @@
 $\alpha$+$\gamma$ two phase TiAl alloy; void; molecular dynamics
 \end{keyword}
 \end{frontmatter}
-\linenumbers
+%\linenumbers
 
 \section{Introduction}
 TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite{Xiong2015}. However, single phase $\gamma-\rm TiAl$ generally brittle at room temperatures and this limits their use in many other fields.Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{intro-structure}.
@@ -67,23 +70,23 @@ TiAl alloy has been used as structural material in aviation industry because its
 	\label{fig:simulation_box}
 \end{figure}
 
-\begin{table}[h]
+\begin{table}[ht]
 \centering
 \caption{Parameters of  nanocrystalline}
 
 \begin{tabular}{l c c l}
 \hline
-			Phase			& Space group		& Designation		& Parameters \\
-			\hline
-			$\alpha_2$		& $\rm P6_3/mmc$ 	& $\rm 0_{19}$ 		& $a$ = 0.5765 \\
-							&					&					& $c$ = 0.46833 \\
-			$\gamma$		& $\rm tP4$ 		& $\rm L1_0$		& $a$ = 0.3997 \\
-			 				&					&					& $c$ = 0.4062 \\			
-			\hline
+Phase			& Space group		& Designation		& Parameters \\
+\hline
+$\alpha_2$		& $\rm P6_3/mmc$ 	& $\rm 0_{19}$ 		& $a$ = 0.5765 \\
+				&					&					& $c$ = 0.46833 \\
+$\gamma$		& $\rm tP4$ 		& $\rm L1_0$		& $a$ = 0.3997 \\
+			 	&					&					& $c$ = 0.4062 \\			
+\hline
 \end{tabular}
-	\label{tab:lattice_parameter}
+\label{tab:lattice_parameter}
 \end{table}
- 
+  
 $\gamma $ TiAl has a fcc-centered tetragonal with an $L1_0$ structure \cite{}, and $\alpha TiAl$ is hcp structure, the structure of the two initial cell are shown in Fig.\cite{}, and the constructing parameters are givin by Table.\cite{}. The simulation cells of two phase poly crystal with an initially spherical void at different position are shown in figure \cite{}. Periodic boundary conditions are applied along all three directions, that makes poly crystal with periodic nanovoid structures. Each cuboidal model, containing about 4.6 million atoms,The initial dimension of simulation cell is  $L_x = nm$, $L_y =  nm$, $L_z =  nm$. The grain orientation and size were randomly created with Voronoi method with code ATOMSK \cite{}, and resulting in the arbitrary shape and orientation of the grains. Only one spherical void defect was placed intragranularlly or intergranularlly within each simulation model void within each simulation model. The intragranular spherical void was located in grain interior of the largest grain of the simulation model, as shown in Fig. \cite{}. The intergranular spherical void was at the center of the simulation cell, as shown in Fig. \cite{}.
 
 \subsection{Atomic Potential}
