move to desktop

--- a/draft/draft.tex
+++ b/draft/draft.tex
@@ -1,14 +1,14 @@
-\documentclass[final,5p,times,onecolumn]{elsarticle}
+\documentclass[review]{elsarticle}
 %\documentclass[]{elsarticle}
 \usepackage[labelfont=bf,justification=raggedright]{caption}
 \captionsetup[figure]{name=Fig. ,labelsep=period,singlelinecheck=true,skip=5pt}
 \captionsetup[table]{labelsep=newline,font=footnotesize,singlelinecheck=false,skip=5pt}
 %\documentclass[final,5p,times,twocolumn]{elsarticle}
-\setlength{\mathindent}{3cm}
+%\setlength{\mathindent}{3cm}
 %Function format
 \usepackage{lineno,hyperref}
 \modulolinenumbers[5]
-	
+	 
 	\journal{Computational Materaials Science}
 	
 	%%%%%%%%%%%%%%%%%%%%%%%
@@ -48,6 +48,16 @@ $\alpha$+$\gamma$ two phase TiAl alloy; void; molecular dynamics
 
 \section{Introduction}
 TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite{Xiong2015}. However, single phase $\gamma-\rm TiAl$ generally brittle at room temperatures and this limits their use in many other fields.Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{intro-structure}.
+
+Two phase titanium aluminide alloys exhibit a much better mechanical performance than their monolithic
+constituents $\gamma$(TiAl) and $\alpha_2$ (Ti3Al), provided that the phase distribution and grain size are suitably controlled. Two-phase titantium aliuminde alloys with proper phase distribution and grain size exhibit better mechanicalperformance compared with monolithicconstituents gamma and alpha[].
+Brittle fracture in TiAl alloy strongly affects the safety of fracture of structure like turbo of aircraft engine andcombustion generator. [R].Defects such as dislocation, void and segregation plays an significant role in the process of fracture[R].In order to understanding the mechanism of brittle fracture, multiscale methods from micro to marco scale have been applied to investigate the behavior of fracture. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale.
+A previous study on void growth in gamma-TiAl single crystal has reveals that void with high volume fraction detracts incipient yield strength [R].
+Molecular dynamics(MD method has been use to investigate the evolution of void in materials in nano-
+scale[R].
+The fracture mechanisms in the duplex micro-structure are plasticity-induced grain boundary de- cohesion
+and cleavage, while those in the lamellar microstructure are interface delamination and crack- ing across the
+lamellae[R].
 
 \section{Molecular Dynamics Simulation }
 
