--- a/draft/ref/Falcon.bib
+++ b/draft/ref/Falcon.bib
@@ -7,10 +7,10 @@ BibTeX export options can be customized via Options -> BibTeX in Mendeley Deskto
 abstract = {Nanocrystalline metals have been shown to exhibit unique mechanical behavior, including break-down in Hall-Petch behavior, suppression of dislocation-mediated plasticity, induction of grain boundary sliding, and induction of mechanical grain coarsening. Early research on the fatigue behavior of nanocrystalline metals shows evidence of improved fatigue resistance compared to traditional microcrystalline metals. In this review, experimental and modeling observations are used to evaluate aspects of cyclic plasticity, microstructural stability, crack initiation processes, and crack propagation processes. In cyclic plasticity studies to date, nanocrystalline metals have exhibited strongly rate-dependent cyclic hardening, suggesting the importance of diffusive deformation mechanisms such as grain-boundary sliding. The cyclic deformation processes have also been shown to cause substantial mechanically-induced grain coarsening reminiscent of coarsening observed during large-strain monotonic deformation of nanocrystalline metals. The crack-initiation process in nanocrystalline metals has been associated with both subsurface internal defects and surface extrusions, although it is unclear how these extrusions form when the grain size is below the scale necessary for persistent slip band formation. Finally, as expected, nanocrystalline metals have very little resistance to crack propagation due to limited plasticity and the lack of crack path tortuosity among other factors. Nevertheless, like bulk metallic glasses, nanocrystalline metals exhibit both ductile fatigue striations and metal-like Paris-law behavior. The review provides both a comprehensive critical survey of existing literature and a summary of key areas for further investigation.},
 author = {Padilla, H. A. and Boyce, B. L.},
 doi = {10.1007/s11340-009-9301-2},
-file = {:C$\backslash$:/DOC/Mendeley Desktop/Experimental Mechanics/2010/2010{\_}A Review of fatigue behavior in nanocrystalline metals.pdf:pdf},
+file = {::},
 isbn = {0014-4851},
 issn = {00144851},
-journal = {Exp. Mech.},
+journal = {Experimental Mechanics},
 keywords = {Alloy,Failure,Fatigue,Nanocrystalline,Ultra-fine grained},
 number = {1},
 pages = {5--23},
@@ -22,10 +22,10 @@ year = {2010}
 abstract = {The role of inflammation in tendon injury is uncertain and a topic of current interest. In vitro studies of tendon accelerated overload damage can serve as a valuable source of information on the early stages of tendinopathy. Viable fascicle bundles from bovine flexor tendons were subjected to cyclic uniaxial loading from 1-10{\%} strain. Immuno-staining for inflammatory markers and matrix degradation markers was performed on the samples after mechanical testing. Loaded samples exhibited visible extracellular matrix damage, with disrupted collagen fibers and fiber kinks, and notable damage to the interfascicular matrix. Inflammatory markers COX-2 and IL-6 were only expressed in the cyclically loaded samples. Collagen degradation markers MMP-1 and C1,2C were colocalized in many areas, with staining occurring in the interfascicular matrix or the fascicular tenocytes. These markers were present in control samples, but staining became increasingly intense with loading. Little MMP-3 or MMP-13 was evident in control sections. In loaded samples, some sections showed intense staining of these markers, again localized to interfascicular regions. This study suggests that inflammatory markers may be expressed rapidly after tendon overload exercise. Interestingly, both inflammation and damage-induced matrix remodeling seem to be concentrated in, or in the vicinity of, the highly cellular interfascicular matrix.},
 author = {Spiesz, Ewa M. and Thorpe, Chavaunne T. and Chaudhry, Saira and Riley, Graham P. and Birch, Helen L. and Clegg, Peter D. and Screen, Hazel R.C.},
 doi = {10.1002/jor.22879},
-file = {:C$\backslash$:/DOC/Mendeley Desktop/Journal of Orthopaedic Research/2015/2015{\_}Tendon extracellular matrix damage, degradation and inflammation in response to in vitro overload exercise.pdf:pdf},
+file = {::},
 isbn = {1554-527X (Electronic)$\backslash$r0736-0266 (Linking)},
 issn = {1554527X},
-journal = {J. Orthop. Res.},
+journal = {Journal of Orthopaedic Research},
 keywords = {ECM damage,collagen,fatigue,inflammation,interfascicular matrix,matrix degradation,tendon},
 number = {6},
 pages = {889--897},
